added chat routes and user routes

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@
   secret= I am Secret!
   name= Nox_Chat
   MONGO_URI = mongodb+srv://Nik21:Nik%402072@backenddb.de7zblu.mongodb.net/ecom?retryWrites=true&w=majority&appName=Nox_Chat
+  TOKEN_NAME = nox_token
