--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
