--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@
   name= Nox_Chat
   MONGO_URI = mongodb+srv://Nik21:Nik%402072@backenddb.de7zblu.mongodb.net/ecom?retryWrites=true&w=majority&appName=Nox_Chat
   TOKEN_NAME = nox_token
+  ADMIN_TOKEN_NAME = nox_admin_token
+  ADMIN_SECRET_KEY = starx21
