--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.3.0",
-    "6pp": "^1.1.15",
+    "@reduxjs/toolkit": "^2.2.4",
+    "6pp": "^1.2.16",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "emoji-picker-react": "^4.9.2",
     "moment": "^2.30.1",
@@ -24,7 +26,9 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.22.3"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
