--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,7 @@
   ADMIN_TOKEN_NAME = nox_admin_token
   ADMIN_SECRET_KEY = starx21
   NODE_ENV = DEVELOPMENT
+  CLOUDINARY_CLOUD_NAME = dki615p7n
+  CLOUDINARY_API_KEY = 944268389557841
+  CLOUDINARY_API_SECRET = 960xaEqUIH0R1PyIGjWEDNCU7xw
+  CLIENT_URL = 
