--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "emoji-picker-react": "^4.9.2",
+    "framer-motion": "^11.0.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.5"
