--- a/server/.env
+++ b/server/.env
@@ -9,5 +9,5 @@
   CLOUDINARY_CLOUD_NAME = dki615p7n
   CLOUDINARY_API_KEY = 944268389557841
   CLOUDINARY_API_SECRET = 960xaEqUIH0R1PyIGjWEDNCU7xw
-  CLIENT_URL = 
+  CLIENT_URL = http://localhost:5173
   
